@@ -17,7 +17,8 @@ HEAD
 	  template. Admins can select if they wish to create an email account  automatically
 	  by default when creating new users.
 	+ Enable mail services by default
-	+ Reverted UI component name to be compatible with previous versionsx
+	+ Fix ids and checkRowExist in ExternalAccount.pm
+	+ Reverted UI component name to be compatible with previous versions
 1.3.13
 	+ Fixed bug in UI: now we can set properly the maximum message size
 1.3.12
